sql/sql_parse.cc
@@ -2161,6 +2161,26 @@ bool dispatch_command(enum enum_server_command command, THD *thd,
     if (check_global_access(thd,RELOAD_ACL))
       break;
     mysql_log.write(thd,command,NullS);
+#ifndef DBUG_OFF
+    DBUG_EXECUTE_IF("simulate_detached_thread_refresh",
+                    {
+                      /*
+                        Simulate a reload without a attached thread session.
+                        Provides a environment similar to that of when the
+                        server receives a SIGHUP signal and reloads caches
+                        and flushes tables.
+                      */
+                      bool res;
+                      my_pthread_setspecific_ptr(THR_THD, NULL);
+                      res= reload_acl_and_cache(NULL, options | REFRESH_FAST,
+                                                NULL, &not_used);
+                      my_pthread_setspecific_ptr(THR_THD, thd);
+                      if (!res)
+                        send_ok(thd);
+                      break;
+                    }
+                    );
+#endif
     if (!reload_acl_and_cache(thd, options, (TABLE_LIST*) 0, &not_used))
       send_ok(thd);
     break;
